# plover_english_stenotype_plus

./: README.md  english_stenotype_plus.py  plover_english_stenotype_plus.py  setup.cfg
