[metadata]
name = plover_english_stenotype_plus
version = 1.0.0
description = English Stenotype extended with extra keys for fn, res1, res2 keys.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/AlexandraAlter/plover_english_stenotype_plus
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
py_modules =
	plover_english_stenotype_plus

[options.entry_points]
plover.system =
  English Stenotype Plus = plover_english_stenotype_plus
